--- a/dashboard.html
+++ b/dashboard.html
@@ -115,7 +115,7 @@
                 <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" data-widget="tree">
-                    <li class="header">MAIN NAVIGATION</li>
+                    <li class="header">PRODUTO</li>
                     <li class="active treeview">
                         <a href="#">
                             <i class="fa fa-dashboard"></i>
