--- a/dashboard.html
+++ b/dashboard.html
@@ -97,6 +97,20 @@
                             <span>Ajuda</span>
                         </a>
                     </li>
+                    <li class="treeview">
+                        <a href="#" class="bg-light-blue-active">
+                            <i class="fa fa-lock"></i>
+                            <span>Administração</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="http://">Ajuda</a></li>
+                            <li><a href="http://">Parceiros</a></li>
+                            <li><a href="http://">Material promocional</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <!-- /.sidebar -->
